syntax = "proto3";

package pb;

import "images.proto";

option go_package = "Backend/pb";

// Create 
message CreateImagesRequest {
    int32 UserID = 1;
    string Qr = 2;
    string Img1 = 3;
    string Img2 = 4;
    string Img3 = 5;
    string Img4 = 6;
    string Icon = 7;
}
message CreateImagesResponse {
    Images img = 1;
}

// Get
message GetImagesRequest {
    int32 UserID = 1;
}

message GetImagesResponse {
    Images img = 1;
}

// Updat
message UpdateImagesRequest {
    int32 UserID = 1;
    string Qr = 2;
    string Img1 = 3;
    string Img2 = 4;
    string Img3 = 5;
    string Img4 = 6;
    string Icon = 7;
}
message UpdateImagesResponse {
    Images img = 1;
}
